--- a/index.html
+++ b/index.html
@@ -53,8 +53,19 @@
 
                 </div>
             </div> -->
+            <!-- <div class="ticket">
+                <div class="ticket-color ticket-color-yellow"></div>
+                <div class="ticket-id">#7878</div>
+                <div class="task">
+                    ajhajcajcbajscbsjb njbz ba znbz dc dz sd c sc s cs sa 
+                </div>
+            </div> -->
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/short-unique-id@latest/dist/short-unique-id.min.js"></script>
+    <script>
+         var uid = new ShortUniqueId();
+    </script>
     <script src="script.js"></script>
 
 
