--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 </div>
             </div>
         </div>
+        <!-- <div></div> -->
         <div class="ticket-container">
             <!-- <div class="modal">
                 <div class="task-to-be-added" contenteditable="true">
